infra/deployment/prod/k8s/organization-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-mongo-depl
  namespace: production
spec:
  selector:
    matchLabels:
      app: organization-mongo
  template:
    metadata:
      labels:
        app: organization-mongo
    spec:
      containers:
        - name: organization-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: organization-mongo-srv
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: organization-mongo
  ports:
    - name: organization-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
