infra/deployment/prod/k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: slack-user-prod
          image: gcr.io/ticketing-dev-281211/slack-user-prod
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 3000
      targetPort: 3000
