infra/deployment/prod/k8s/user-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mongo-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-mongo
  template:
    metadata:
      labels:
        app: user-mongo
    spec:
      containers:
      - name: user-mongo
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: user-mongo-srv
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: user-mongo
  ports:
  - name: user-mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
