infra/deployment/prod/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.global-static-ip-name: slack-prod-ip
    networking.gke.io/managed-certificates: slack-ssl
spec:
  rules:
        - http:
            paths:
              - path: /graphql
                backend:
                  serviceName: api-gateway-srv
                  servicePort: 3000
              - path: /api/users/?(.*)
                backend:
                  serviceName: user-srv
                  servicePort: 3000
              - path: /api/organization/?(.*)
                backend:
                  serviceName: organization-srv
                  servicePort: 3000
              - path: /api/channel/?(.*)
                backend:
                  serviceName: channel-srv
                  servicePort: 3000
